Add exercises skeleton

--- a/lab_mn_01.ipynb
+++ b/lab_mn_01.ipynb
@@ -189,9 +189,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dați diverse valori pasului (chiar și pas negativ), valorii inițiale și celei finale. Puteți modifica celula anterioară sau puteți crea una nouă apăsând butonul `+` din meniul de mai sus.\n",
+    "Dați diverse valori pasului (chiar și pas negativ), valorii inițiale și celei finale. Puteți modifica celula anterioară sau puteți crea una nouă apăsând butonul `+` din meniul de mai sus. Pentru pas = 1, comanda poate fi dată doar ca `v = [initial : final]` sau chiar `v = initial : final`. Urmăriți rezultatul."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Construiți un vector cu numerele pare de la 1 la 16."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "% TODO\n",
+    "v_test = []\n",
     "\n",
-    "Pentru pas = 1, comanda poate fi dată doar ca `v = [initial : final]` sau chiar `v = initial : final`. Urmăriți rezultatul. După ce ați construit diverse matrici de tip coloană, linie sau matrice generală, introduceți comenzile:"
+    "assert(v_test == [2 4 6 8 10 12 14 16])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "După ce ați construit diverse matrici de tip coloană, linie sau matrice generală, introduceți comenzile:"
    ]
   },
   {
@@ -829,16 +853,91 @@
     "Este recomandat ca ori de câte ori folosiți o funcție Octave, în interiorul unei bucle, să verificați (consultând\n",
     "help-ul Octave) dacă aceasta poate fi de folos la vectorizarea calculului. De asemenea, țineți cont de\n",
     "faptul că operațiile logice din instrucțiunile de ramificare pot ajuta la vectorizare.\n",
-    "## Probleme propuse\n",
+    "## Probleme propuse"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Problema 1\n",
-    "Scrieți fișierul valori.txt cu valorile funcției `f(x) = 2x + 1` pe intervalul [0, 1] și pasul 0.1.\n",
+    "Scrieți fișierul `valori.txt` cu valorile funcției `f(x) = 2x + 1` pe intervalul [0, 1] și pasul 0.1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "% TODO: Scrieți codul în această celulă\n",
+    "% HINT: Puteți folosi funcția `dlmwrite` dacă nu doriți să folosiți `fopen`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v_test = dlmread('valori.txt');\n",
+    "assert(v_test, [1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Problema 2\n",
     "Scrieți o funcție care să calculeze suma numerelor impare mai mici ca n utilizând bucla for. Aceeași\n",
     "problemă utilizând bucla while. Citirea unui numar de la tastatură se face utilizând comanda:\n",
-    "`var = input(’Introduceți variabila:’)`.\n",
+    "`var = input(’Introduceți variabila:’)`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "% TODO: Scrieți codul care definește funcția în această celulă\n",
+    "function [result] = odd_sum()\n",
+    "    n = input(’Introduceți variabila:’)\n",
+    "    % Atribuiți-i variabilei `result` rezultatul dorit\n",
+    "    result = NaN\n",
+    "endfunction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Problema 3\n",
     "Scrieți o funcție care citește o matrice pătratică din fișier și verifică dacă matricea are proprietățile unui\n",
     "pătrat magic (suma elementelor pe linii, coloane și diagonale este aceeași)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "% TODO: Scrieți codul care definește funcția în această celulă\n",
+    "function [result] = is_magic(M)\n",
+    "    % Atribuiți-i variabilei `result` rezultatul dorit\n",
+    "    result = NaN\n",
+    "endfunction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert(is_magic(magic(3)) == true)\n",
+    "assert(is_magic(rand(3)) == false)"
    ]
   },
   {
@@ -846,12 +945,62 @@
    "metadata": {},
    "source": [
     "### Problema 4\n",
-    "Scrieți o funcție pentru determinarea dimensiunii unui fișier. Funcția are ca parametru numele fișierului.\n",
+    "Scrieți o funcție pentru determinarea dimensiunii unui fișier. Funcția are ca parametru numele fișierului."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "% TODO: Scrieți codul care definește funcția în această celulă\n",
+    "function [result] = file_size(filename)\n",
+    "    % Atribuiți-i variabilei `result` rezultatul dorit\n",
+    "    result = NaN\n",
+    "endfunction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert(file_size('to_be_printed') == 28)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Problema 5\n",
     "Scrieți o funcție care citește un fișier text linie cu linie și întoarce numărul total de apariții ale unui\n",
     "anumit șir de caractere în fișier. Funcția va afișa fiecare linie din fișier, precedată de numărul de apariții ale\n",
-    "șirului în linie. La final, se va afisa numărul total de apariții. Funcția are semnătura:\n",
-    "`function y = NumarAparitii(numefisier)`"
+    "șirului în linie. La final, se va afisa numărul total de apariții și va fi și valoarea întoarsă de funcție."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "% TODO: Scrieți codul care definește funcția în această celulă\n",
+    "function [result] = NumarAparitii(numefisier, sir)\n",
+    "    % Atribuiți-i variabilei `result` rezultatul dorit (numărul total de apariții)\n",
+    "    result = NaN\n",
+    "endfunction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert(NumarAparitii('to_be_printed', 'Line') == 2)\n",
+    "assert(NumarAparitii('to_be_printed', 'line') == 1)"
    ]
   }
  ],
