Make asserts not editable

--- a/lab_mn_01.ipynb
+++ b/lab_mn_01.ipynb
@@ -206,8 +206,17 @@
    "outputs": [],
    "source": [
     "% TODO\n",
-    "v_test = []\n",
-    "\n",
+    "v_test = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "editable": false
+   },
+   "outputs": [],
+   "source": [
     "assert(v_test == [2 4 6 8 10 12 14 16])"
    ]
   },
@@ -877,7 +886,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": false
+   },
    "outputs": [],
    "source": [
     "v_test = dlmread('valori.txt');\n",
@@ -933,7 +944,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": false
+   },
    "outputs": [],
    "source": [
     "assert(is_magic(magic(3)) == true)\n",
@@ -964,7 +977,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": false
+   },
    "outputs": [],
    "source": [
     "assert(file_size('to_be_printed') == 28)"
@@ -996,7 +1011,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": false
+   },
    "outputs": [],
    "source": [
     "assert(NumarAparitii('to_be_printed', 'Line') == 2)\n",
@@ -1005,6 +1022,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Edit Metadata",
   "kernelspec": {
    "display_name": "Octave",
    "language": "octave",
