--- a/Interpolari.ipynb
+++ b/Interpolari.ipynb
@@ -16,10 +16,10 @@
     "\n",
     "Exemple de situatii in care se folosesc interpolari:\n",
     "\n",
-    "- senzorii de temperatura de pe plava video / procesor, ofera date discrete, care se interpoleaza si se obtin grafice\n",
+    "- senzorii de temperatura de pe placa video / procesor, ofera date discrete, care se interpoleaza si se obtin grafice\n",
     "- egalizatoare de sunet: se seteaza anumite frecvente, valorile intermediare fiind deduse numeric\n",
     "- statistica: calcule la bursele de valori, predictii de profit si dezvoltare financiara\n",
-    "- captare de semnale WiFi, radar, radio etc.\n",
+    "- captare de semnale WiFi, radar, radio, toate.\n",
     "- AutoCAD\n",
     "- jocuri, streaming\n",
     "\n",
@@ -29,7 +29,7 @@
     "\n",
     "- sunt usor de retinut in memoria calculatorului (de ex.: un vector in care se retin coeficientii $a_0, a_1, \\dots, a_n$ corespunzatori termenilor $x^0, x^1, \\dots, x^n$ ai polinomului);\n",
     "\n",
-    "- sunt usor de derivat si integrat numeric, de catre un calculator.\n",
+    "- sunt usor de derivat si integrat numeric de catre un calculator.\n",
     "\n",
     "### De ce putem face asta?\n",
     "\n",
@@ -49,7 +49,7 @@
     "\n",
     "$$f(x) = f(t) + \\frac{(x - t)}{1!}f'(t) + \\frac{(x - t)^2}{2!}f''(t) + \\dots + \\frac{(x-t)^n}{n!}f^{(n)}(t) + \\frac{(x - t)^{n + 1}}{(n + 1)!}f^{(n + 1)}(\\xi)$$\n",
     "\n",
-    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Notand $P_n(x) = \\displaystyle\\sum_\\limits{i = 0}^{n}\\frac{(x - t)^i}{i!}f^{(i)}(x - t)$ si $R_n(x) = \\displaystyle\\frac{(x - t)^{n + 1}}{(n + 1)!}f^{(n + 1)}(\\xi)$, polinomul de interpolare, respectiv eroarea interpolarii, s-ar poate spune ca descompunerea in serie Taylor reprezinta o metoda buna de interpolare:\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Notand $P_n(x) = \\displaystyle\\sum_\\limits{i = 0}^{n}\\frac{(x - t)^i}{i!}f^{(i)}(x - t)$ si $R_n(x) = \\displaystyle\\frac{(x - t)^{n + 1}}{(n + 1)!}f^{(n + 1)}(\\xi)$, polinomul de interpolare, respectiv eroarea interpolarii, s-ar putea spune ca descompunerea in serie Taylor reprezinta o metoda buna de interpolare:\n",
     "\n",
     "![ref2](Taylor.png 'Aproximarea lui e^x cu descompunere in serie Taylor in jurul lui t = 0')\n",
     "\n",
@@ -61,7 +61,7 @@
     "\n",
     "## <div style=\"text-align: center\"> Concluzii generale  </div>\n",
     "Asadar, de la interpolari ne dorim, in general:\n",
-    "- ca daca prin calcularea functiilor necesare o singura data, acestea sa ofere aproximari cu erori mici pentru orice puncte din domeniul de interpolare;\n",
+    "- ca prin calcularea functiilor necesare o singura data, acestea sa ofere aproximari cu erori mici pentru orice puncte din domeniul de interpolare;\n",
     "- ca functiile obtinute sa fie polinomiale\n",
     "- complexitati cat mai mici pentru o anumita precizie - duh!\n"
    ]
