Adaugare definitie a suportului interpolarii

--- a/Interpolari.ipynb
+++ b/Interpolari.ipynb
@@ -12,29 +12,33 @@
     "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lumea observabila este mereu continua, pe cand datele masurate nu pot fi altfel decat discrete, deoarece acestea nu pot fi masurate decat punctual, in anumite momente de timp. De aici apare o problema:\n",
     "> Cum corelam ceea ce masuram cu ce se intampla in realitate?\n",
     "\n",
-    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mai exact, daca avem nevoie de valori ale fenomenului studiat la momente de timp in care nu s-au facut masuratori, ce facem? Simplu: interpolam rezultatele masuratorilor si **aproximam** rezultatele dorite. Trebuie observat si ca majoritatea functiilor intalnite in natura sunt **continue.**\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mai exact, daca avem nevoie de valori ale fenomenului studiat la momente de timp in care nu s-au facut masuratori, ce facem? Simplu: interpolam rezultatele masuratorilor si **aproximam** rezultatele dorite. Trebuie observat si ca majoritatea functiilor matematice care modeleaza fenomene intalnite in natura sunt **continue.**\n",
     "\n",
     "Exemple de situatii in care se folosesc interpolari:\n",
     "\n",
-    "- senzorii de temperatura de pe placa video / procesor, ofera date discrete, care se interpoleaza si se obtin grafice\n",
-    "- egalizatoare de sunet: se seteaza anumite frecvente, valorile intermediare fiind deduse numeric\n",
+    "- senzorii de temperatura de pe plava video / procesor, ofera date discrete, care se interpoleaza si se obtin grafice\n",
+    "- egalizatoarele de sunet: se seteaza anumite frecvente, valorile intermediare fiind deduse numeric\n",
     "- statistica: calcule la bursele de valori, predictii de profit si dezvoltare financiara\n",
-    "- captare de semnale WiFi, radar, radio, toate.\n",
+    "- captare de semnale WiFi, radar, radio etc.\n",
     "- AutoCAD\n",
     "- jocuri, streaming\n",
     "\n",
     "## <div style=\"text-align: center\"> Cum se face?  </div>\n",
     "\n",
-    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Prin interpolare, se determina una sau mai multe **functii (adesea polinomiale)** ce aproximeaza valorile functiei, cu o eroare acceptabila. De ce polinoame?\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Functia de interpolat este data printr-un set de puncte de pe graficul acesteia, numite **suportul interpolarii**:\n",
+    "\n",
+    "$$\\{(x_0, f(x_0)), (x_1, f(x_1)), \\dots, (x_n, f(x_n))\\}$$.\n",
+    "\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Prin interpolare, se determina una sau mai multe **functii (adesea polinomiale)** ce aproximeaza valorile functiei, cu o eroare acceptabila. De ce polinoame?\n",
     "\n",
     "- sunt usor de retinut in memoria calculatorului (de ex.: un vector in care se retin coeficientii $a_0, a_1, \\dots, a_n$ corespunzatori termenilor $x^0, x^1, \\dots, x^n$ ai polinomului);\n",
     "\n",
-    "- sunt usor de derivat si integrat numeric de catre un calculator.\n",
+    "- sunt usor de derivat si integrat numeric, de catre un calculator.\n",
     "\n",
     "### De ce putem face asta?\n",
     "\n",
     "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Datorita **Teoremei lui Weierstrass**:  \n",
-    "$ \\forall \\ f : [a, b] \\rightarrow \\mathbb{R}$ continua si $a, b \\in \\mathbb{R}$, atunci $\\forall \\varepsilon > 0$, exista un polinom $P(x)$ cu un grad suficient de mare astfel incat\n",
+    "$ \\forall \\ f : [a, b] \\rightarrow \\mathbb{R}$ continua si $a, b \\in \\mathbb{R}$, atunci $\\forall \\varepsilon > 0$, exista un polinom $P(x)$ de grad suficient de mare astfel incat\n",
     "urmatoarea relatie sa fie valabila $\\forall x \\in [a, b]$:\n",
     "$$|f(x) - P(x)| < \\varepsilon$$\n",
     "\n",
@@ -49,7 +53,7 @@
     "\n",
     "$$f(x) = f(t) + \\frac{(x - t)}{1!}f'(t) + \\frac{(x - t)^2}{2!}f''(t) + \\dots + \\frac{(x-t)^n}{n!}f^{(n)}(t) + \\frac{(x - t)^{n + 1}}{(n + 1)!}f^{(n + 1)}(\\xi)$$\n",
     "\n",
-    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Notand $P_n(x) = \\displaystyle\\sum_\\limits{i = 0}^{n}\\frac{(x - t)^i}{i!}f^{(i)}(x - t)$ si $R_n(x) = \\displaystyle\\frac{(x - t)^{n + 1}}{(n + 1)!}f^{(n + 1)}(\\xi)$, polinomul de interpolare, respectiv eroarea interpolarii, s-ar putea spune ca descompunerea in serie Taylor reprezinta o metoda buna de interpolare:\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Notand $P_n(x) = \\displaystyle\\sum_\\limits{i = 0}^{n}\\frac{(x - t)^i}{i!}f^{(i)}(x - t)$ si $R_n(x) = \\displaystyle\\frac{(x - t)^{n + 1}}{(n + 1)!}f^{(n + 1)}(\\xi)$, polinomul de interpolare, respectiv eroarea interpolarii, s-ar poate spune ca descompunerea in serie Taylor reprezinta o metoda buna de interpolare:\n",
     "\n",
     "![ref2](Taylor.png 'Aproximarea lui e^x cu descompunere in serie Taylor in jurul lui t = 0')\n",
     "\n",
@@ -61,10 +65,17 @@
     "\n",
     "## <div style=\"text-align: center\"> Concluzii generale  </div>\n",
     "Asadar, de la interpolari ne dorim, in general:\n",
-    "- ca prin calcularea functiilor necesare o singura data, acestea sa ofere aproximari cu erori mici pentru orice puncte din domeniul de interpolare;\n",
+    "- ca prin calcularea functiilor necesare o singura data, acestea sa ofere aproximari cu erori mici (de un ordin acceptabil) pentru orice puncte din domeniul de interpolare;\n",
     "- ca functiile obtinute sa fie polinomiale\n",
     "- complexitati cat mai mici pentru o anumita precizie - duh!\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
