--- a/lab_mn_01.ipynb
+++ b/lab_mn_01.ipynb
@@ -121,9 +121,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "v =\n",
+      "\n",
+      "   0\n",
+      "   1\n",
+      "   2\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "v = [0; 1; 2]"
    ]
@@ -137,9 +150,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "l =\n",
+      "\n",
+      "   0 + 0i   1 + 5i   2 + 0i\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "l = [0 1+5i 2]"
    ]
@@ -156,9 +180,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "m =\n",
+      "\n",
+      "   0   1   2\n",
+      "   3   4   5\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "m = [0 1 2; 3 4 5]"
    ]
@@ -1024,21 +1060,29 @@
  "metadata": {
   "celltoolbar": "Edit Metadata",
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "display_name": "Octave",
+   "language": "octave",
+   "name": "octave"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "file_extension": ".m",
+   "help_links": [
+    {
+     "text": "GNU Octave",
+     "url": "https://www.gnu.org/software/octave/support.html"
+    },
+    {
+     "text": "Octave Kernel",
+     "url": "https://github.com/Calysto/octave_kernel"
+    },
+    {
+     "text": "MetaKernel Magics",
+     "url": "https://github.com/calysto/metakernel/blob/master/metakernel/magics/README.md"
+    }
+   ],
+   "mimetype": "text/x-octave",
+   "name": "octave",
+   "version": "4.0.0"
   }
  },
  "nbformat": 4,
