--- a/Interpolari.ipynb
+++ b/Interpolari.ipynb
@@ -33,7 +33,9 @@
     "\n",
     "- sunt usor de retinut in memoria calculatorului (de ex.: un vector in care se retin coeficientii $a_0, a_1, \\dots, a_n$ corespunzatori termenilor $x^0, x^1, \\dots, x^n$ ai polinomului);\n",
     "\n",
-    "- sunt usor de derivat si integrat numeric, de catre un calculator.\n",
+    "- sunt usor de derivat si integrat numeric, de catre un calculator;\n",
+    "\n",
+    "- sunt flexibile, iar modificand coeficientii sau gradul se pot modela in multiple moduri.\n",
     "\n",
     "### De ce putem face asta?\n",
     "\n",
@@ -69,20 +71,6 @@
     "- ca functiile obtinute sa fie polinomiale\n",
     "- complexitati cat mai mici pentru o anumita precizie - duh!\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
